--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 
 cmake_minimum_required(VERSION 2.8.9)
-project(danscgi C)
+project(activereadercgi C)
+
 
 macro(use_c99)
-  if (CMAKE_VERSION VERSION_LESS "3.1")
+  if (CMAKE_VERSION VERSION_LESS    "3.1")
     if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
       set (CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
     endif ()
@@ -14,7 +15,10 @@ endmacro(use_c99)
 
 use_c99()
 
+
+
+
 set(CMAKE_C_STANDARD 99)
 
-add_executable(danscgi src/main.c src/settings.c)
+add_executable(activereadercgi src/main.c src/settings.c)
 
